changing resources absolute url to relative

--- a/about/index.html
+++ b/about/index.html
@@ -14,10 +14,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.1/css/academicons.min.css" integrity="sha512-b1ASx0WHgVFL5ZQhTgiPWX+68KjS38Jk87jg7pe+qC7q9YkEtFq0z7xCglv7qGIs/68d3mAp+StfC8WKC5SSAg==" crossorigin="anonymous" />
 
 
-<link rel="stylesheet" href="https://defaultbreak.org/css/colour/gruvbox-dark.css">
-<link rel="stylesheet" href="https://defaultbreak.org/css/colour/dark-mode.css">
-<link rel="stylesheet" href="https://defaultbreak.org/css/risotto.css">
-<link rel="stylesheet" href="https://defaultbreak.org/css/custom.css">
+<link rel="stylesheet" href="/css/colour/gruvbox-dark.css">
+<link rel="stylesheet" href="/css/colour/dark-mode.css">
+<link rel="stylesheet" href="/css/risotto.css">
+<link rel="stylesheet" href="/css/custom.css">
 </head>
 
     <body>
@@ -85,7 +85,7 @@
             </section>
 
             <footer class="page__footer"><p class="copyright">copyright 2022 by mílton gago da câmara moura</p>
-<p class="advertisement">Powered by <a href="https://gohugo.io/">hugo</a> and <a href="https://github.com/joeroe/risotto">risotto</a>.</p>
+<p class="advertisement">powered by <a href="https://gohugo.io/">hugo</a></p>
 </footer>
 
         </div>
